# TFG-solar-tracker

./: .gitignore  README.md
arquitectura2/: README.md  bucle_imagen_simulada.py  solve_phi.py  solve_theta_elev.py
bucle_control_v2/: CMakeLists.txt
bucle_control_v2/main/: CMakeLists.txt  cam_client.c  cam_client.h  cmd_server.c  cmd_server.h  config.h  console.c  console.h  control.c  control.h  homing.c  homing.h  kinematics.c  kinematics.h  main.c  stepper.h  stepper_fas.cpp  wifi.c  wifi.h
kivy_monitor/: mjpeg_server.py  prueba_prediccion_hora_solar.py  requirements.txt  solar_monitor.py  test_stream.py
latex/: TFG.tex  datos-tfg.tex
latex/bib/: main.bib
latex/sty/: eiiatfg.cls
latex/tex/: acronimos.tex  antecedentes.tex  conclusiones.tex  desarrollo.tex  introduccion.tex  objetivos.tex  resultados.tex  resumen.tex  simbolos.tex
latex/tex/latex/: texto.tex
proceso_cam_v1/: CMakeLists.txt  sdkconfig.defaults
proceso_cam_v1/main/: CMakeLists.txt  idf_component.yml  main.c  server.c  server.h  vision.c  vision.h
stewart/: README.md  bucle_control_v1.py  imagen_simulada_prueba.py  mapeo_espacio_trabajo_ruta_solar.py
